# image-captioning-app

./: pyproject.toml  sql_app.db
core/config/: settings.py
src/: main.py
src/models/: __init__.py  user.py
src/schemas/: user.py
src/service/: user_crud.py
