[tool.poetry]
name = "imagecaption"
version = "0.1.0"
description = ""
authors = ["alirezaJavaheri <alireza.jvh98@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.3"
djangorestframework = "^3.14.0"
pyscopg2 = "^66.0.2"
django-filter = "^23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
